--- a/mathematics/mathematical_notation/Big_O_notation.html
+++ b/mathematics/mathematical_notation/Big_O_notation.html
@@ -73,6 +73,9 @@
   <li class="">
     <a href="../../coding/intro.html">Coding</a>
   </li>
+  <li class="">
+    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
