--- a/mathematics/series_and_sequences/Fourier Series.html
+++ b/mathematics/series_and_sequences/Fourier Series.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Fourier Transforms" href="Fourier Transforms.html" />
-    <link rel="prev" title="Taylor series" href="Taylor_series.html" />
+    <link rel="prev" title="Series and sequences" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,14 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,35 +92,35 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+    </li>
+    <li class="">
+      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
+    </li>
+    <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
     </li>
     <li class="active">
       <a href="intro.html">Series And Sequences</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="Taylor_series.html">Taylor series</a>
-      </li>
       <li class="active">
         <a href="">Fourier Series</a>
       </li>
       <li class="">
         <a href="Fourier Transforms.html">Fourier Transforms</a>
       </li>
+      <li class="">
+        <a href="Taylor_series.html">Taylor series</a>
+      </li>
     </ul>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -457,7 +457,7 @@ b_n = \frac{1}{\pi} \int_{0}^{\pi} \sin(nx)dx = \left\{
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Taylor_series.html" title="previous page">Taylor series</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Series and sequences</a>
     <a class='right-next' id="next-link" href="Fourier Transforms.html" title="next page">Fourier Transforms</a>
 
     </div>
