--- a/mathematics/series_and_sequences/intro.html
+++ b/mathematics/series_and_sequences/intro.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Taylor series" href="Taylor_series.html" />
-    <link rel="prev" title="Vector calculus" href="../calculus/Vector_calculus.html" />
+    <link rel="next" title="Fourier Series" href="Fourier Series.html" />
+    <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="../numerical_methods/Timestepping_an_ODE.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,14 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,35 +92,35 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+    </li>
+    <li class="">
+      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
+    </li>
+    <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
     </li>
     <li class="active">
       <a href="">Series And Sequences</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="Taylor_series.html">Taylor series</a>
-      </li>
       <li class="">
         <a href="Fourier Series.html">Fourier Series</a>
       </li>
       <li class="">
         <a href="Fourier Transforms.html">Fourier Transforms</a>
       </li>
+      <li class="">
+        <a href="Taylor_series.html">Taylor series</a>
+      </li>
     </ul>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -230,8 +230,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../calculus/Vector_calculus.html" title="previous page">Vector calculus</a>
-    <a class='right-next' id="next-link" href="Taylor_series.html" title="next page">Taylor series</a>
+    <a class='left-prev' id="prev-link" href="../numerical_methods/Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
+    <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier Series</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
