--- a/mathematics/series_and_sequences/Fourier Transforms.html
+++ b/mathematics/series_and_sequences/Fourier Transforms.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Taylor series" href="Taylor_series.html" />
+    <link rel="next" title="Sets and functions" href="../sets and functions/intro.html" />
     <link rel="prev" title="Fourier Series" href="Fourier Series.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,13 +104,13 @@
       <a href="intro.html">Series And Sequences</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Taylor_series.html">Taylor series</a>
+      </li>
+      <li class="">
         <a href="Fourier Series.html">Fourier Series</a>
       </li>
       <li class="active">
         <a href="">Fourier Transforms</a>
-      </li>
-      <li class="">
-        <a href="Taylor_series.html">Taylor series</a>
       </li>
     </ul>
     </li>
@@ -589,7 +589,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Fourier Series.html" title="previous page">Fourier Series</a>
-    <a class='right-next' id="next-link" href="Taylor_series.html" title="next page">Taylor series</a>
+    <a class='right-next' id="next-link" href="../sets and functions/intro.html" title="next page">Sets and functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
