--- a/mathematics/series_and_sequences/Fourier Series.html
+++ b/mathematics/series_and_sequences/Fourier Series.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Fourier Transforms" href="Fourier Transforms.html" />
-    <link rel="prev" title="Series and sequences" href="intro.html" />
+    <link rel="prev" title="Taylor series" href="Taylor_series.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -103,14 +103,14 @@
     <li class="active">
       <a href="intro.html">Series And Sequences</a>
       <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Taylor_series.html">Taylor series</a>
+      </li>
       <li class="active">
         <a href="">Fourier Series</a>
       </li>
       <li class="">
         <a href="Fourier Transforms.html">Fourier Transforms</a>
-      </li>
-      <li class="">
-        <a href="Taylor_series.html">Taylor series</a>
       </li>
     </ul>
     </li>
@@ -457,7 +457,7 @@ b_n = \frac{1}{\pi} \int_{0}^{\pi} \sin(nx)dx = \left\{
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Series and sequences</a>
+    <a class='left-prev' id="prev-link" href="Taylor_series.html" title="previous page">Taylor series</a>
     <a class='right-next' id="next-link" href="Fourier Transforms.html" title="next page">Fourier Transforms</a>
 
     </div>
