--- a/mathematics/series_and_sequences/intro.html
+++ b/mathematics/series_and_sequences/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Fourier Series" href="Fourier Series.html" />
+    <link rel="next" title="Taylor series" href="Taylor_series.html" />
     <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="../numerical_methods/Timestepping_an_ODE.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,13 +104,13 @@
       <a href="">Series And Sequences</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Taylor_series.html">Taylor series</a>
+      </li>
+      <li class="">
         <a href="Fourier Series.html">Fourier Series</a>
       </li>
       <li class="">
         <a href="Fourier Transforms.html">Fourier Transforms</a>
-      </li>
-      <li class="">
-        <a href="Taylor_series.html">Taylor series</a>
       </li>
     </ul>
     </li>
@@ -231,7 +231,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../numerical_methods/Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
-    <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier Series</a>
+    <a class='right-next' id="next-link" href="Taylor_series.html" title="next page">Taylor series</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
