--- a/mathematics/series_and_sequences/Taylor_series.html
+++ b/mathematics/series_and_sequences/Taylor_series.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Fourier Series" href="Fourier Series.html" />
-    <link rel="prev" title="Series and sequences" href="intro.html" />
+    <link rel="next" title="Sets and functions" href="../sets and functions/intro.html" />
+    <link rel="prev" title="Fourier Transforms" href="Fourier Transforms.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -103,14 +103,14 @@
     <li class="active">
       <a href="intro.html">Series And Sequences</a>
       <ul class="nav sidenav_l3">
-      <li class="active">
-        <a href="">Taylor series</a>
-      </li>
       <li class="">
         <a href="Fourier Series.html">Fourier Series</a>
       </li>
       <li class="">
         <a href="Fourier Transforms.html">Fourier Transforms</a>
+      </li>
+      <li class="active">
+        <a href="">Taylor series</a>
       </li>
     </ul>
     </li>
@@ -454,8 +454,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Series and sequences</a>
-    <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier Series</a>
+    <a class='left-prev' id="prev-link" href="Fourier Transforms.html" title="previous page">Fourier Transforms</a>
+    <a class='right-next' id="next-link" href="../sets and functions/intro.html" title="next page">Sets and functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
