--- a/mathematics/series_and_sequences/intro.html
+++ b/mathematics/series_and_sequences/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Fourier Series" href="Fourier Series.html" />
-    <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="../numerical_methods/Timestepping_an_ODE.html" />
+    <link rel="prev" title="Vector calculus" href="../calculus/Vector_calculus.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -71,19 +71,19 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../../coding/intro.html">Coding</a>
+    <a href="../../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,16 +92,10 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
-    </li>
-    <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
-      <a href="">Series And Sequences</a>
+      <a href="">Series and sequences</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Fourier Series.html">Fourier Series</a>
@@ -115,15 +109,18 @@
     </ul>
     </li>
     <li class="">
-      <a href="../sets and functions/intro.html">Sets And Functions</a>
+      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../sets and functions/intro.html">Sets and functions</a>
+    </li>
+    <li class="">
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -230,7 +227,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../numerical_methods/Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
+    <a class='left-prev' id="prev-link" href="../calculus/Vector_calculus.html" title="previous page">Vector calculus</a>
     <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier Series</a>
 
     </div>
