--- a/mathematics/series_and_sequences/Taylor_series.html
+++ b/mathematics/series_and_sequences/Taylor_series.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Mathematical notation" href="../mathematical_notation/intro.html" />
+    <link rel="next" title="Sets and functions" href="../sets and functions/intro.html" />
     <link rel="prev" title="Fourier Transforms" href="Fourier Transforms.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,16 +74,13 @@
     <a href="../../coding/intro.html">Coding</a>
   </li>
   <li class="">
-    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,7 +89,13 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+    </li>
+    <li class="">
+      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
+    </li>
+    <li class="">
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
     </li>
     <li class="active">
       <a href="intro.html">Series and sequences</a>
@@ -109,18 +112,15 @@
     </ul>
     </li>
     <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
-    </li>
-    <li class="">
       <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../z_extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -455,7 +455,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Fourier Transforms.html" title="previous page">Fourier Transforms</a>
-    <a class='right-next' id="next-link" href="../mathematical_notation/intro.html" title="next page">Mathematical notation</a>
+    <a class='right-next' id="next-link" href="../sets and functions/intro.html" title="next page">Sets and functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
