deploy: 8eec557c0fabfa4fec54ea3792443264e576faa6

--- a/mathematics/series_and_sequences/Taylor_series.html
+++ b/mathematics/series_and_sequences/Taylor_series.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Sets and functions" href="../sets and functions/intro.html" />
-    <link rel="prev" title="Fourier Transforms" href="Fourier Transforms.html" />
+    <link rel="prev" title="Fourier transforms" href="Fourier Transforms.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -112,10 +112,10 @@
       <a href="intro.html">Series and sequences</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Fourier Series.html">Fourier Series</a>
+        <a href="Fourier Series.html">Fourier series</a>
       </li>
       <li class="">
-        <a href="Fourier Transforms.html">Fourier Transforms</a>
+        <a href="Fourier Transforms.html">Fourier transforms</a>
       </li>
       <li class="active">
         <a href="">Taylor series</a>
@@ -480,7 +480,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Fourier Transforms.html" title="previous page">Fourier Transforms</a>
+    <a class='left-prev' id="prev-link" href="Fourier Transforms.html" title="previous page">Fourier transforms</a>
     <a class='right-next' id="next-link" href="../sets and functions/intro.html" title="next page">Sets and functions</a>
 
     </div>
