--- a/mathematics/series_and_sequences/intro.html
+++ b/mathematics/series_and_sequences/intro.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Fourier Series" href="Fourier Series.html" />
+    <link rel="next" title="Fourier series" href="Fourier Series.html" />
     <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="../numerical_methods/Timestepping_an_ODE.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -112,10 +112,10 @@
       <a href="">Series and sequences</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Fourier Series.html">Fourier Series</a>
+        <a href="Fourier Series.html">Fourier series</a>
       </li>
       <li class="">
-        <a href="Fourier Transforms.html">Fourier Transforms</a>
+        <a href="Fourier Transforms.html">Fourier transforms</a>
       </li>
       <li class="">
         <a href="Taylor_series.html">Taylor series</a>
@@ -261,7 +261,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../numerical_methods/Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
-    <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier Series</a>
+    <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier series</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
