--- a/c_mathematics/series_and_sequences/intro.html
+++ b/c_mathematics/series_and_sequences/intro.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Fourier series" href="Fourier Series.html" />
-    <link rel="prev" title="BTCS Scheme" href="../numerical_methods/BTCS_20200820.html" />
+    <link rel="prev" title="Iterative methods to solve a matrix" href="../numerical_methods/15_iterative_methods_to_solve_matrix.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -278,7 +278,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../numerical_methods/BTCS_20200820.html" title="previous page">BTCS Scheme</a>
+    <a class='left-prev' id="prev-link" href="../numerical_methods/15_iterative_methods_to_solve_matrix.html" title="previous page">Iterative methods to solve a matrix</a>
     <a class='right-next' id="next-link" href="Fourier Series.html" title="next page">Fourier series</a>
 
     </div>
